--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "rollup-plugin-dts": "^6.1.1",
     "storybook": "^8.1.11",
     "tslib": "^2.6.3",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "rollup-plugin-postcss": "^4.0.2"
   },
   "module": "dist/esm/index.js",
   "files": [
