--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,9 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: Create or modify .npmrc
-      run:
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > .npmrc
+    - name: Configure npm registry
+      run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - run: npm ci
