--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,9 +27,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - name: Configure npm registry
-      run: echo "//npm.pkg.github.com/:_authToken=${{ classic.GITHUB_TOKEN }}" > ~/.npmrc
+      run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.ComponentLibrary }}" > ~/.npmrc
       env:
-          GITHUB_TOKEN: ${{ classic.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ComponentLibrary }}
     - run: npm ci
     - run: npm install
     - run: npm run build --if-present
